# babyLuigi

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-ubuntu-platform.yml
cmake/: Dependencies.cmake  FindZeroMQ.cmake  SystemLink.cmake
cmake/ZCMake/: ZeroMQTargets-debug.cmake  ZeroMQTargets-release.cmake  ZeroMQTargets.cmake
devcontainer/: Dockerfile
include/: baby_luigi.hpp  blocking_priority_queue.hpp  blocking_queue.hpp  define_arguements.hpp  fwd_vocabulary.hpp  shy_guy.hpp  shyguy_request.hpp  task.hpp  task_request.hpp
include/graph/: graph.hpp
include/process/: binary_file_conversion.hpp  file_write.hpp  system_execution.hpp
include/task_system/: task_maintainer.hpp  task_queue.hpp  task_system.hpp
libraries/: CMakeLists.txt
libraries/cron_parser/: CMakeLists.txt  cron_expression.cpp  cron_field.cpp  cron_field.hpp  date_time.cpp  day_of_month_field.cpp  day_of_month_field.hpp  day_of_week_field.cpp  day_of_week_field.hpp  hour_field.cpp  hour_field.hpp  minute_field.cpp  minute_field.hpp  month_field.cpp  month_field.hpp
libraries/storage/: CMakeLists.txt  fs_storage.cpp  fs_storage.hpp  storage.hpp
libraries/threadsafe_shyguy/: CMakeLists.txt  concurrent_shyguy.cpp  concurrent_shyguy.hpp
libraries/tui/: CMakeLists.txt  actionspanel.cpp  actionspanel.h  dagpage.cpp  dagpage.h  dagpanel.cpp  dagpanel.h  homepage.cpp  homepage.h  horizontaltabpanel.cpp  horizontaltabpanel.h  tui.cpp  tui.h
scripts/: build.bat  build.sh  clean.sh  genbuild.bat
src/: CMakeLists.txt
src/babyLuigi/: CMakeLists.txt  baby_luigi.cc  baby_luigi.hpp  baby_main.cc
src/shyGuy/: CMakeLists.txt  concurrent_shyguy.cc  concurrent_shyguy.hpp  interactive_shyguy.cpp  interactive_shyguy.hpp  scheduler.cpp  scheduler.hpp  shy_guy.cc  shy_guy.hpp  shy_main.cc  shyexecutioner.cc  shyexecutioner.hpp  shyguy.cc  shyguy.hpp  task_maintainer.cc  task_maintainer.hpp  zmq_consumer.hpp  zmq_router.cc  zmq_router.hpp
test/: CMakeLists.txt  test_basic.cpp  test_fs_storage.cpp  test_zmq_babyluigi.cpp  test_zmq_router.cpp
todo/: Taskbreakdown.md
